--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,13 +6,13 @@
   },
   "extends": ["airbnb", "plugin:jest/recommended", "plugin:react/recommended"],
   "settings": { "react": { "version": "detect" } },
-  "plugins": ["react", "jest"],
+  "plugins": ["react", "jest", "react-hooks"],
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
   },
   "rules": {
-    "indent": ["error", "tab"],
+    "indent": ["error", "tab", {"SwitchCase": 1}],
     "no-tabs": ["error", { "allowIndentationTabs": true }],
     "comma-dangle": ["error", "never"],
     "no-unused-expressions": ["error", { "allowShortCircuit": true }],
@@ -24,6 +24,8 @@
     "react/jsx-indent": [2, "tab", { "checkAttributes": true, "indentLogicalExpressions": true }],
     "react/jsx-indent-props": [2, "tab"],
     "react/jsx-props-no-spreading": 0,
-    "react/forbid-prop-types": 0
+    "react/forbid-prop-types": 0,
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
   }
 }
