--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.1",
+    "axios": "^0.21.1",
     "eslint-config-airbnb": "^18.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-oauth-popup": "^1.0.3",
+    "react-query": "^3.19.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
