--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.6.1",
+    "@types/react": "^17.0.18",
+    "@types/react-dom": "^17.0.9",
     "antd": "^4.15.1",
     "axios": "^0.21.1",
     "eslint-config-airbnb": "^18.2.1",
@@ -16,9 +20,10 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-oauth-popup": "^1.0.3",
-    "react-query": "^3.19.1",
+    "react-query": "^3.21.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "typescript": "^4.3.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -46,7 +51,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
     "eslint": "^7.24.0",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-react": "^7.23.2"
   }
 }
