--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,28 +4,101 @@
     "commonjs": true,
     "es2021": true
   },
-  "extends": ["airbnb", "plugin:jest/recommended", "plugin:react/recommended"],
-  "settings": { "react": { "version": "detect" } },
-  "plugins": ["react", "jest", "react-hooks"],
+  "extends": [
+    "airbnb-typescript",
+    "plugin:import/typescript",
+    "plugin:@typescript-eslint/recommended",
+    "eslint:recommended",
+    "plugin:jest/recommended",
+    "plugin:react/recommended",
+    "plugin:import/recommended"
+  ],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "plugins": [
+    "jest",
+    "react-hooks"
+  ],
   "parserOptions": {
     "ecmaVersion": 12,
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
   "rules": {
-    "indent": ["error", "tab", {"SwitchCase": 1}],
-    "no-tabs": ["error", { "allowIndentationTabs": true }],
-    "comma-dangle": ["error", "never"],
-    "no-unused-expressions": ["error", { "allowShortCircuit": true }],
-    "no-console": ["error", { "allow": ["warn", "error"] }],
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }],
+    "indent": "off",
+    "@typescript-eslint/indent": [
+      "error",
+      "tab",
+      {
+        "SwitchCase": 1
+      }
+    ],
+    "no-tabs": [
+      "error",
+      {
+        "allowIndentationTabs": true
+      }
+    ],
+    "no-undef": "off",
+    "comma-dangle": "off",
+    "no-unused-expressions": [
+      "error",
+      {
+        "allowShortCircuit": true
+      }
+    ],
+    "no-console": [
+      "warn",
+      {
+        "allow": [
+          "warn",
+          "error"
+        ]
+      }
+    ],
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
+    ],
     "class-methods-use-this": 0,
-    "import/extensions": ["error", "ignorePackages"],
     "react/jsx-filename-extension": 0,
-    "react/jsx-indent": [2, "tab", { "checkAttributes": true, "indentLogicalExpressions": true }],
-    "react/jsx-indent-props": [2, "tab"],
+    "react/jsx-indent": [
+      2,
+      "tab",
+      {
+        "checkAttributes": true,
+        "indentLogicalExpressions": true
+      }
+    ],
+    "react/jsx-indent-props": [
+      2,
+      "tab"
+    ],
     "react/jsx-props-no-spreading": 0,
     "react/forbid-prop-types": 0,
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
-    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+    "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies,
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "@typescript-eslint/naming-convention": ["error", {
+      "format": ["camelCase", "PascalCase", "UPPER_CASE"],
+      "leadingUnderscore": "allow",
+      "selector": "default"
+  }]
   }
 }
